--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,19 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>org.jboss.logging</groupId>
+     <artifactId>jboss-logging-processor</artifactId>
+     <version>2.2.0.Final</version>
+   </dependency>
+ 
+   <dependency>
+     <groupId>org.jboss.logging</groupId>
+     <artifactId>jboss-logging-processor</artifactId>
+     <version>2.2.0.Final</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
