--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
      <artifactId>jboss-logging-processor</artifactId>
      <version>2.2.0.Final</version>
    </dependency>
+ 
+   <dependency>
+     <groupId>org.hsqldb</groupId>
+     <artifactId>hsqldb</artifactId>
+     <version>2.5.0</version>
+   </dependency>
  </dependencies>
 
 	<build>
